--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.MainActivity"
-            android:label="单词本"
-            >
+        <activity android:name=".Activity.testActivity"></activity>
+        <activity
+            android:name=".Activity.MainActivity"
+            android:label="单词本">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.WordDetailActivity">
-
-        </activity>
+        <activity android:name=".Activity.WordDetailActivity"></activity>
     </application>
 
 </manifest>
