--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.wordbook">
-
+    <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE"
+        tools:ignore="ProtectedPermissions" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,6 +15,8 @@
         tools:replace="android:name">
         <activity
             android:name=".Activity.MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="sensor"
             android:label="单词本">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
