--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,28 +2,49 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.wordbook">
-    <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE"
+
+    <uses-permission
+        android:name="android.permission.WRITE_MEDIA_STORAGE"
         tools:ignore="ProtectedPermissions" />
+
     <application
+        android:name=".Methods.WordsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".WordsApplication"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:name">
+        <provider
+            android:name=".WordsProvider"
+            android:authorities="com.example.wordbook.wordsprovider"
+            android:enabled="true"
+            android:exported="true"></provider>
+
         <activity
             android:name=".Activity.MainActivity"
             android:configChanges="orientation"
-            android:screenOrientation="sensor"
-            android:label="单词本">
+            android:label="单词本"
+            android:screenOrientation="sensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.WordDetailActivity"></activity>
+        <activity
+            android:name=".Activity.WordDetailActivity"
+            android:label="WordInfomation"
+            android:parentActivityName=".Activity.MainActivity" />
+        <activity
+            android:name=".Activity.UseHelpActivity"
+            android:label="help"
+            android:parentActivityName=".Activity.MainActivity" />
+        <activity
+            android:name=".Activity.RemberWordActivity"
+            android:label="@string/RemenberWord"
+            android:parentActivityName=".Activity.MainActivity" />
     </application>
 
 </manifest>
