--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name=".Methods.WordsApplication"
         android:allowBackup="true"
+        android:name=".Methods.WordsApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -27,6 +27,7 @@
             android:name=".Activity.MainActivity"
             android:configChanges="orientation"
             android:label="@string/wordbook"
+            android:launchMode="singleTop"
             android:screenOrientation="sensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
